Removed img in team section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Pregnant Ears</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-    <meta name="description" content="Welcome to pregant ears">
-    <meta name="author" content="harkable.com"> 
+    <meta name="description" content="pregant ears">
+    <meta name="author" content="Philippe Gudemann"> 
   	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   	<script>window.jQuery || document.write('<script src="assets/js/jquery-1.7.2.min.js"><\/script>')</script>
     <script src="assets/js/jquery-ui-1.8.22.custom.min.js"></script>
@@ -71,7 +71,7 @@
 		  <li class="span4">
 		    <div class="thumbnail">
 		      <img alt="" src="assets/img/icon1.png">
-		      <h3>Expecting in multiple media form</h3>
+		      <h3>Any media form</h3>
 		      <p>I have been working on various band production, with the corporate world and indie game projects</p>
 		    </div>
 		  </li>
@@ -79,7 +79,7 @@
 		  <li class="span4">
 		    <div class="thumbnail">
 		      <img alt="" src="assets/img/icon2.png">
-		      <h3>Releasing stuff</h3>
+		      <h3>Releasing music</h3>
 		      <p>I'm just passionated about releasing music for various media types like cd video or games</p>
 		    </div>
 		  </li>
@@ -100,11 +100,11 @@
       <!-- #team -->    
 <div class="container-fluid" id="team">
 	<div class="container dark">
-		<h1>Meet the team</h1>
+		<h1>Listen</h1>
 			<ul class="thumbnails">
 			  <li class="span3">
 			    <div class="thumbnail">
-			      <img alt="" src="assets/img/1.png">
+			      <!-- img alt="" src="assets/img/1.png" -->
 			      <h3>Mark</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
@@ -118,7 +118,7 @@
 			
 			  <li class="span3">
 			    <div class="thumbnail">
-			      <img alt="" src="assets/img/2.png">
+			      <!-- img alt="" src="assets/img/2.png" -->
 			      <h3>Lucy</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
@@ -132,7 +132,7 @@
 			  
 			  <li class="span3">
 			    <div class="thumbnail">
-			      <img alt="" src="assets/img/3.png">
+			      <!--img alt="" src="assets/img/3.png" -->
 			      <h3>Steve</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
@@ -146,7 +146,7 @@
 			
 			  <li class="span3">
 			    <div class="thumbnail">
-			      <img alt="" src="assets/img/4.png">
+			      <!-- img alt="" src="assets/img/4.png"-->
 			      <h3>Michelle</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
@@ -199,10 +199,10 @@
 		<div class="span4">	
 				<h2>Get in touch now ?</h2>
 				
-				<p>Having a great project that needs a sound facilitator ? Curious about my current productions ? Drop me an email it's free :-)</p>
+				<p>Having a great project that needs a sound facilitator ? Curious about my current productions ? Drop me an email.</p>
 	
 				<address>
-				  <strong>Philippe Güdemann</strong><br>
+				  <strong>Philippe Gudemann</strong><br>
 				  Lausanne<br>
 				  Switzerland<br>
 				</address>	
