replaced names with latin

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			  <li class="span3">
 			    <div class="thumbnail">
 			      <!-- img alt="" src="assets/img/1.png" -->
-			      <h3>Mark</h3>
+			      <h3>vulputate</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
 				      <img alt="" src="assets/img/linkedin.png">
@@ -119,7 +119,7 @@
 			  <li class="span3">
 			    <div class="thumbnail">
 			      <!-- img alt="" src="assets/img/2.png" -->
-			      <h3>Lucy</h3>
+			      <h3>facilisi</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
 				      <img alt="" src="assets/img/linkedin.png">
@@ -133,7 +133,7 @@
 			  <li class="span3">
 			    <div class="thumbnail">
 			      <!--img alt="" src="assets/img/3.png" -->
-			      <h3>Steve</h3>
+			      <h3>egestas</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
 				      <img alt="" src="assets/img/linkedin.png">
@@ -147,7 +147,7 @@
 			  <li class="span3">
 			    <div class="thumbnail">
 			      <!-- img alt="" src="assets/img/4.png"-->
-			      <h3>Michelle</h3>
+			      <h3>blandit</h3>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			      <div class="social">
 				      <img alt="" src="assets/img/linkedin.png"/>
