--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">    
-
+	<script src='assets/js/AudioContext.js'></script>
+	<link rel="stylesheet" type="text/css" href="assets/css/AudioContext.css">
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,8 +56,10 @@
 		<div class="container-fluid" id="intro">	
 		<div class="container">	
 			<div class="row span6 center">
-					<h1>{Releasing the Song Appollo Hang}</h1>
+					<h1>{ Releasing the Song Appollo Hang }</h1>
 				<p>A very deep and emotional song crafted with a hang drum tuned on the mythic Hijazz tune.. Available on your favorite store.</p>
+				  <p class="play">Play</p>
+  				  <p class="stop">Stop</p>
 			</div>	
 		</div>
 	</div>
