cleand old audio context ref

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="container">	
 			<div class="row span6 center">
 					<h1>{ Releasing the Song Appollo Hang }</h1>
-				<p>A very deep and emotional song crafted with a hang drum tuned on the mythic Hijazz tune.. Available on your favorite store.</p>
+				<p>A very deep and emotional song crafted with a hang drum tuned on the mythic Hijazz tune.. Please wait until the song is loaded.</p>
 				<button style="height: 44px; width: 75px;" onclick="play();">Play</button>
 				<button style="height: 44px; width: 75px;" onclick="stop();">Stop</button>
 			</div>	
@@ -257,7 +257,6 @@ $(function () {
 </script>
 <script src="assets/js/1.js"></script>
 <script src="assets/js/base64-binary.js"></script>
-<!--script src='assets/js/AudioContext.js'></script-->
 <script>
     var myAudioContext,
 	mySource, 
