Cleaned old ref in html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
           	</a>
-          	<a class="brand scroller" data-section="html" href="index.html">Pregnant Ears</a>
+          	<a class="brand scroller" data-section="html" href="index.html">Pregnant Ears : pregnant as an offline app</a>
 		  	<div class="nav-collapse collapse">
                 <ul class="nav pull-right">
                   	<li><a href="#" class="toggle_video">Home</a></li>
@@ -57,7 +57,7 @@
 		<div class="container">	
 			<div class="row span6 center">
 					<h1>{ Releasing the Song Appollo Hang }</h1>
-				<p>A very deep and emotional song crafted with a hang drum tuned on the mythic Hijazz tune.. Please wait until the song is loaded.</p>
+				<p>A very deep and emotional song crafted with a hang drum tuned on the mythic Hijazz tune.. For your confort, please wait until the page is fully loaded.</p>
 				<button style="height: 44px; width: 75px;" onclick="play();">Play</button>
 				<button style="height: 44px; width: 75px;" onclick="stop();">Stop</button>
 			</div>	
@@ -169,7 +169,7 @@
       <!-- #contact -->   	
 	<div class="container-fluid" id="contact">
 	<div class="container dark">
-		<h1>Get in contact with me</h1>	
+		<h1>Get in contact</h1>	
 	
 		<div class="span5">			
 			<form>
@@ -200,9 +200,9 @@
 		</div>
 	
 		<div class="span4">	
-				<h2>Get in touch now ?</h2>
+				<h2>Get in touch ?</h2>
 				
-				<p>Having a great project that needs a sound facilitator ? Curious about my current productions ? Drop me an email.</p>
+				<p>You like this little place and wants to now more about my work ? Drop me an email.</p>
 	
 				<address>
 				  <strong>Philippe Gudemann</strong><br>
